# Task-Management-FastAPI

./: alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 09da127c02d3_add_fields_in_dependanttask.py  22f6e6666f9f_initial_migration.py  294d766f49c7_make_phone_number_as_a_nullable_field.py  3c399b7ff84a_remove_unique_constraint_from_phone_.py  4522be55c1b9_make_datetime_columns_timezone_aware.py  728cd55f5c7d_update_the_column_type_from_int_to_bool.py  7602216f80f9_add_dependant_table.py
app/: main.py
app/core/: config.py  dependencies.py
app/db/: session.py
app/dependencies/: auth.py
app/models/: __init__.py  task.py  user.py
app/router/: auth.py  task.py
app/schemas/: auth.py  task.py
app/services/: auth_service.py  task_service.py
app/utils/: jwt.py  security.py
